--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.html
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.html
@@ -28,6 +28,8 @@
         </container-element>
           
       </mat-card-content>
+      <div class="chat-msg-spacer">
+      </div>
 
 
     </mat-card>
