--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
@@ -37,6 +37,9 @@ left-arrow-icon {
     width: 100%;
     border: 0px;
     background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    
 
 }
 
@@ -161,6 +164,12 @@ mat-card{
   bottom: 0%;
   min-width: 100%;
   border-radius: 0;
+}
+
+.chat-msg-spacer{
+  bottom: 0%;
+  min-width: 100%;
+  min-height: 50px;
 }
 
 
