--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
@@ -51,7 +51,7 @@ pick-buttons {
 }
 
 .button-right {
-  background-color: #03a9f4;
+  background-color: #00b1b8;
   color: white;
   height: 50px;
   border: 1px;
@@ -64,7 +64,7 @@ pick-buttons {
 }
 
 .button-left {
-  background-color: #03a9f4;
+  background-color: #00b1b8;
   color: white;
   height: 50px;
   border: 1px;
@@ -77,7 +77,7 @@ pick-buttons {
 }
 
 .button-mid {
-  background-color: #03a9f4;
+  background-color: #00b1b8;
   color: white;
   height: 50px;
   border: 1px;
