--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -80,7 +80,7 @@
 
 <ng-template #loading>
         <div class="centered">
-            <img class="heart" src="assets/images/panda.png"/>
+            <img class="heart" src="assets/images/panda2.png"/>
         </div>
 </ng-template>
 
