--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
@@ -63,7 +63,7 @@
 
 <ng-template #loading>
   <div class="centered">
-    <mat-spinner [color]="'accent'"></mat-spinner>
+      <img class="heart" src="assets/images/panda2.png"/>
   </div>
 </ng-template>
 
