--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.html
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.html
@@ -1,13 +1,13 @@
 <container-element [ngSwitch]="this.which_page">
+  
   <div>
-    <img src="assets/images/panda.png"  class="back-pic"/>
     <section class="header">
       <button mat-button label class="button-switch-page" (click)="goToMyBooks()">
         <div *ngIf="1 === 1; then leftArrowIcon"></div>
       </button>
       <span class="header-chat" ngDefaultControl>Chat</span>
     </section>
-
+<img src="assets/images/panda2.png"  class="back-pic"/> 
 
     <mat-card class="chat-div" #content style="height: 100%;">
       <mat-card-content class="chat-container" *ngFor="let item of items" selected="true" name="msg_list" ngDefaultControl>
