--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.html
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.html
@@ -69,6 +69,6 @@
 <ng-template #loading>
     <div class="centered">
         <!-- <mat-spinner [color]="'accent'"></mat-spinner> -->
-        <img class="heart" src="assets/images/panda.png"/>
+        <img class="heart" src="assets/images/panda2.png"/>
     </div>
 </ng-template>
