--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -24,6 +24,18 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  .heart {
+    margin: 0%;
+    padding: 0%;
+    font-size: 150px;
+    animation: beat .40s infinite alternate;
+    transform-origin: center;
+  }
+  
+  /* Heart beat animation */
+  @keyframes beat{
+    to { transform: scale(1.4); }
+  }
 
   .book-status{
     position:absolute;
