categories change appear and color of chips and buttons

--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -22,9 +22,9 @@
     </mat-card>
 
     <mat-card class="pick-buttons" [aria-orientation]="horizontal">
-      <button mat-button label class="button-left" (click)="pickAll()"> Pick All Categories </button>
-      <button mat-button label class="button-mid" (click)="pickForUser()"> I'm Feeling Lucky </button>
-      <button mat-button label class="button-right" (click)="unpickAll()"> Clear Selection </button>
+      <button mat-button label class="button-left" (click)="pickAll()">Pick All</button>
+      <button mat-button label class="button-mid" (click)="pickForUser()">Feeling Lucky </button>
+      <button mat-button label class="button-right" (click)="unpickAll()">Clear All</button>
       <br>
     </mat-card>
 
