--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -50,8 +50,8 @@ body{
     border-style: solid;
     border-radius:50%;
     border-color: #fafafa;
-    transform: scale(1.2);
-    background-color: #fafafa;
+    transform: scale(1.4);
+    background-color: #2f3842;
   }
 
   //switch categories
