--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -45,7 +45,8 @@ body{
     border-style: solid;
     border-radius:50%;
     border-color: #fafafa;
-    transform: scale(1.2);
+    transform: scale(1.4);
+    background-color: #2f3842;
   }
 
   //switch categories
