fix icons in bottom navbars

--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -77,7 +77,7 @@ label.header-cat {
   transform: translate(0%,0%);
 }
 .icon{
-  height:35px;
+  //height:35px;
 }
 #rightArrowIcon{
   position: relative;
