--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
@@ -43,7 +43,7 @@
       </mat-grid-tile>
       <mat-grid-tile item-height="100%">
         <button style="font-size:1em; " (click)="showUser()">
-          <mat-icon svgIcon='people-gray' class='icon'></mat-icon>
+          <mat-icon svgIcon='people-gray' class='icon-bigger'></mat-icon>
         </button>
       </mat-grid-tile>
       <mat-grid-tile item-height="100%">
@@ -73,6 +73,6 @@
 
 <ng-template #chatButton>
   <button mat-icon-button (click)="startChat()">
-    <mat-icon svgIcon='new-message' class="icon"></mat-icon>
+    <mat-icon svgIcon='new-message' class="icon-bigger"></mat-icon>
   </button>
 </ng-template>
