--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -138,3 +138,8 @@ section {
   .addbook_author {
     font-size: 50%;
   }
+
+icon-bigger{
+    height: 30px !important;
+    width: 30px !important;
+  }
