--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <hr />
-
+<div *ngIf="((!results.length) && searched) then noBooks"></div>
 <mat-grid-list [cols]="numCols" rowHeight="5:10" gutterSize="10" (window:resize)="onResize()">
   <mat-grid-tile *ngFor="let result of results">
     <div class='book-bottom'>
@@ -32,4 +32,7 @@
 <ng-template #leftArrowIcon>
     <mat-icon svgIcon='left-arrow' class="left-arrow-icon"></mat-icon>
   </ng-template>
-  
+
+  <ng-template #noBooks>
+    <span>Sorry we couldn't find your book</span>
+  </ng-template>
