--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
@@ -79,7 +79,7 @@ section {
 
 .fa-plus{
   vertical-align: middle;
-  color: #3A95D7;
+  color: #0ecece;
   font-size: 50px;
   top:50%;
   left:50%;
