--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -16,7 +16,7 @@
           selected="true"
           [color]="this.chipColor(chip.active)"
           class="mat-chip">
-          {{chip.name}}
+          <div class="category-name">{{chip.name}}</div>
         </mat-chip>
       </mat-chip-list>
     </mat-card>
