--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -27,14 +27,37 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
   }
-
   .heart {
-    margin: 0%;
-    padding: 0%;
-    font-size: 150px;
-    animation: beat .40s infinite alternate;
-    transform-origin: center;
+    // margin: 0%;
+    // padding: 0%;
+    // font-size: 150px;
+    // animation: beat .40s infinite alternate;
+    // transform-origin: center;
+    animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(.5,0.05,1,.5);
+    animation-iteration-count: infinite;
   }
+
+    
+@keyframes bounce {
+  from { transform: translate3d(0, 0, 0);     }
+  to   { transform: translate3d(0, 200px, 0); }
+}
+
+/* Prefix Support */
+ball {
+  -webkit-animation-name: bounce;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-timing-function: cubic-bezier(.5,0.05,1,.5);
+  -webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes bounce {
+  from { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
+  to   { -webkit-transform: translate3d(0, 200px, 0); transform: translate3d(0, 200px, 0); }
+}
   
   /* Heart beat animation */
   @keyframes beat{
