--- a/BookItSrc/src/app/main/sub-main/settings/dialog-two-button/dialog-two-button.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/dialog-two-button/dialog-two-button.component.html
@@ -5,7 +5,7 @@
     <button mat-raised-button (click)="clickedConfirm()">CONFIRM</button>
     <button mat-raised-button (click)="clickedCancel()">CANCEL</button>
     <br>
-    <mat-checkbox class="dont-show" [(ngModel)]="checked_dontshow">Dont show this message again.</mat-checkbox>
+   <!-- <mat-checkbox class="dont-show" [(ngModel)]="checked_dontshow">Dont show this message again.</mat-checkbox>-->
     
   </section>
 </div>
