--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
@@ -98,6 +98,7 @@ mat-card{
 
 
 .label-msg-1 {
+  text-align: left;
   font-size: 12px;
   color: black;
   padding: 5px;
@@ -130,6 +131,7 @@ mat-card{
 
 
 .label-msg-2 {
+  text-align: left;
   font-size: 12px;
   color: black;
   padding: 5px;
