--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -47,7 +47,7 @@
       </mat-card>
 
 
-
+ <!-- 
       <mat-card class="RightLeftStyle">
         <mat-card-content>
           <section class="form-section">
@@ -60,7 +60,7 @@
             </div>
           </section>
         </mat-card-content>
-      </mat-card>
+      </mat-card>  -->
 
       <mat-card class="buttons">
         <mat-card-content>
