--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -2,7 +2,10 @@
   padding-top: 15px;
   padding-right: 0px;
   padding-left: 4px;
+  height: 100%;
+  width: 100%;
 }
+
 
 .RightLeftStyle,
 .search_radius,
@@ -22,8 +25,8 @@ img {
   border-style: inset;
   border-width: 2px;
   border-color: #00b1b8;
-  height: 20%;
-  width: 50%;
+  height: 30%;
+  width: 58%;
 }
 
 hr {
@@ -56,8 +59,6 @@ right-arrow-icon {
   margin: 10px;
 }
 
-/* search radius */
-
 .container_search_radius {
   display: flex;
   justify-content: space-between;
@@ -65,6 +66,7 @@ right-arrow-icon {
   padding: 14px;
   padding-bottom: 0px;
   flex-direction: row;
+  min-height: 50px;
 }
 
 .form-margin-sr1 {
@@ -100,7 +102,8 @@ div.container_categories {
 }
 
 .mat-card .mat-card-content {
-  width: 100%;
+  width: 100% !important;
+  min-height: 50px;
 }
 
 .mat-slider-horizontal {
@@ -115,6 +118,7 @@ div.container_categories {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: 55px;
 }
 
 .form-margin-c1 {
@@ -161,6 +165,11 @@ div.container_categories {
   min-height: 30px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.container_logout{
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
 
 @media (max-width: 200px) {
