change line height in styles and addbook

--- a/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/add-book/add-book.component.scss
@@ -88,6 +88,7 @@ section {
   filter: drop-shadow(0 0 3px rgba(0,0,0,0.7));
 }
 .book-bottom{
+  line-height: 0.8 !important;
   position: absolute;
   overflow: hidden;
   text-align: center;
