--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.html
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.html
@@ -15,15 +15,11 @@
 
 
           <section class="info-section-1" *ngSwitchCase="selfUserId">
-            <label class="label-msg-1">
-              {{item.content}}
-            </label>
+            <label class="label-msg-1">{{item.content}}</label>
           </section>
 
           <section class="info-section-2" *ngSwitchDefault>
-            <label class="label-msg-2">
-              {{item.content}}
-            </label>
+            <label class="label-msg-2">{{item.content}}</label>
           </section>
         </container-element>
           
