--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.scss
@@ -104,7 +104,7 @@ mat-card{
   padding: 5px;
   word-wrap: break-word;
   max-width: 100%;
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 /deep/ .info-section-1 {
@@ -137,7 +137,7 @@ mat-card{
   padding: 5px;
   word-wrap: break-word;
   max-width: 100%;
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 
