login page no scroll

--- a/BookItSrc/src/app/login/login.component.html
+++ b/BookItSrc/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;" class="container">
-  <div class="row align-items-center" style="margin-top: 20%;">
+  <div class="row align-items-center" style="padding-top: 20%;">
     <div class="col">
       <img src="assets/images/panda.png" />
     </div>
