--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.html
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.html
@@ -49,7 +49,7 @@
                         </mat-card-content>
                     <mat-card-title>{{bookSelected.title}}</mat-card-title>
                     <mat-card-subtitle style="font-size: 18px;color: rgba(0, 0, 0, 0.54);line-height: 1;">by {{bookSelected.author}}</mat-card-subtitle>
-                    <mat-card-content style="font-size: 18px;line-height: 1.2;">{{bookSelected.description}}</mat-card-content>
+                    <mat-card-content style="font-size: 18px;line-height: 1.2;margin-bottom: 50px;">{{bookSelected.description}}</mat-card-content>
                 </mat-card>
                         
                 
