--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
@@ -6,7 +6,40 @@
           <label class="header-cat">My Requests</label>
         </section>
         <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
-          <mat-grid-tile *ngFor="let book of myRequests" (click)="showBookNavbar(book)" style="overflow: visible;">
+            <section class="header">
+                <label class="header-cat">New message</label>
+              </section>
+          <mat-grid-tile *ngFor="let book of new_msg_arr" (click)="showBookNavbar(book)" style="overflow: visible;">
+            <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }"
+              [attr.src]="book.imagePath" />
+              <div *ngIf="book.currentRequest && !book.currentRequest.pending && book.currentRequest.approved && !book.currentRequest.hasNewMessages then requestApprove"></div>
+              <div *ngIf="book.currentRequest && book.currentRequest.hasNewMessages then unreadMessages"></div>
+              <!-- <div class='book-bottom'>
+              <span class='addbook_title'>{{book.title}}</span>
+              <br>
+              <span class='addbook_author'>by {{book.author}}</span>
+            </div> -->
+          </mat-grid-tile>
+
+          <section class="header">
+              <label class="header-cat">Approved</label>
+            </section>
+          <mat-grid-tile *ngFor="let book of approved_arr" (click)="showBookNavbar(book)" style="overflow: visible;">
+            <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }"
+              [attr.src]="book.imagePath" />
+              <div *ngIf="book.currentRequest && !book.currentRequest.pending && book.currentRequest.approved && !book.currentRequest.hasNewMessages then requestApprove"></div>
+              <div *ngIf="book.currentRequest && book.currentRequest.hasNewMessages then unreadMessages"></div>
+              <!-- <div class='book-bottom'>
+              <span class='addbook_title'>{{book.title}}</span>
+              <br>
+              <span class='addbook_author'>by {{book.author}}</span>
+            </div> -->
+          </mat-grid-tile>
+
+          <section class="header">
+              <label class="header-cat">Pending</label>
+            </section>
+          <mat-grid-tile *ngFor="let book of pending_arr" (click)="showBookNavbar(book)" style="overflow: visible;">
             <img class='cover' [ngClass]="{'blurred': (this.bookNavBarEnabled==true && this.bookSelected!=book) , 'regular': (this.bookNavBarEnabled==false ||this.bookSelected==book) }"
               [attr.src]="book.imagePath" />
               <div *ngIf="book.currentRequest && !book.currentRequest.pending && book.currentRequest.approved && !book.currentRequest.hasNewMessages then requestApprove"></div>
